--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 body{
-    font-family: "Roboto" sans-serif;
+    font-family: "Roboto", sans-serif;
 }
 .cabecalho{
     background-color: #0e0027;
@@ -20,6 +20,7 @@ body{
     font-size: 24px;
     font-weight: 500;
     margin-bottom: 32px;
+    line-height: 32px;
     letter-spacing: 2px;
 }
 
@@ -44,6 +45,7 @@ body{
     padding: 16px 13px;
     border-radius: 2px;
     border: 2px solid #6528d3;
+    background-color: #f2eefa;
     color:  #120234;
     height: 52px;
 
@@ -71,6 +73,86 @@ body{
     cursor: pointer;
     letter-spacing: 2px;
     transition: 0,3s;
+}
 
+.container .filtros .btn-filtrar:hover{
+    background-color: #33008f;
 
+}
+.container .cartas{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 32px;
+    margin-top: 32px;
+}
+.container .cartas .carta{
+
+    max-width: 365px;
+    background-color: #ededed;
+    color: #0e0027;
+    border-radius:  20px;
+    box-shadow: 0 6px 12px rgb(0,0,0,0.2);
+}
+.container .carta img{
+    width: 100%;
+    padding: 20px;
+}
+.container .cartas .informacoes{
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    background-color: #ffff;
+    padding: 20px;
+    border-bottom-left-radius: 20px ;
+    border-bottom-right-radius: 20px;
+
+}
+.container .cartas .informacoes .nome-personagem{
+    font-size: 24px;
+    font-weight: 500;
+    color: #111111;
+}
+.container .cartas .informacoes .categoria{
+    color: #7e7e7e;
+    font-weight: 700;
+}
+.container .cartas .informacoes .preco{
+    font-size: 24px;
+    letter-spacing: 2px;
+    font-weight: 700;
+    color: #4d8e5c;
+}
+
+.container .cartas .informacoes .btn-comprar{
+    color: #ededed;
+    background-color: #6528d3;
+    padding: 16px;
+    border-radius: 4px;
+    letter-spacing: 2px;
+    transition: 0,3s;
+    text-align: center;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+.container .cartas .informacoes .btn-comprar:hover{
+    background-color: #33008f;
+}
+.rodape{
+    display: flex;
+    justify-content: center;
+    background-color: #6528d3;
+    color: #ededed;
+    padding: 20px;
+    margin-top: 60px;
+}
+.esconder{
+    display: none;
+}
+
+.mostrar{
+    display: block;
+}
+.cartas .carta-arkanon, .carta-drahven, .carta-kaelthar, .carta-lymara, .carta-maldrik, .carta-nyxsombra { 
+    cursor: pointer;
 }
